# TwoTower

./: .gitignore  5o083bdb34qmxl  front_end.py  generate_triplets.py  generate_tsne_evolution.py  inference.py  inspect_triplets.py  precompute_doc_embeddings.py  pyproject.toml  restructure_project.sh  sweep.yaml  tokenize_dataset.py  train.py  train_RNN.py  train_sweep.py  train_val_accuracy_visul.py  validation.py  validation_RNN_sweep.py  validation_sweep.py  visualize_single_triplet.py  visualize_tsne.py  wandb_Artifact.py
saved_models/: training_config.json
src/two_tower/: model.py
two_tower_msmarco.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
wandb/: latest-run
wandb/run-20250617_123936-ybhuw1c8/: run-ybhuw1c8.wandb
wandb/run-20250617_123936-ybhuw1c8/files/: requirements.txt  wandb-metadata.json
wandb/run-20250617_155726-02gv02wf/: run-02gv02wf.wandb
wandb/run-20250617_155726-02gv02wf/files/: config.yaml  wandb-metadata.json
wandb/sweep-5ymzmskw/: config-j1zn9ez4.yaml  config-l8cs5sps.yaml  config-ojtcxlpq.yaml  config-zo2x1sui.yaml
wandb/sweep-9iwvzemp/: config-c3pgoh5i.yaml  config-mjjjkym0.yaml
wandb/sweep-ddplkkpl/: config-joi27njw.yaml
wandb/sweep-j9ktz4f3/: config-c9ap9125.yaml  config-hoq8qz59.yaml
wandb/sweep-v7odmn95/: config-b1bo86tb.yaml
